--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "my-static-site",
+  "name": "my-website",
   "version": "1.0.0",
-  "description": "A simple static website",
   "scripts": {
-    "build": "echo 'No build process for static files' && mkdir -p dist && cp -r *.html css/ js/ images/ dist/ || true",
-    "start": "npx serve@latest dist/ -p $PORT"
-  },
-  "dependencies": {
-    "serve": "^14.0.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "build": "echo 'No build step needed'"
   }
 }
