--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "my-static-site",
   "version": "1.0.0",
-  {
+  "description": "A simple static website",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "start": "vite preview --port $PORT" 
-  }
-}
+    "build": "echo 'No build process for static files'",
+    "start": "npx serve . -p $PORT"
   },
   "dependencies": {
     "serve": "^14.0.0"
   },
   "engines": {
     "node": ">=18"
-  }
-{
-  "dependencies": {
-    "serve": "^14.0.0" 
   }
 }
